; ModuleID = '/home/carl/AnghaBench/systemd/src/shared/extr_json.c_json_parse_continue.c'
source_filename = "/home/carl/AnghaBench/systemd/src/shared/extr_json.c_json_parse_continue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @json_parse_continue(i8** %0, i32** %1, i32* %2, i32* %3) #0 {
  %5 = alloca i8**, align 8
  %6 = alloca i32**, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i8** %0, i8*** %5, align 8
  store i32** %1, i32*** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %9 = load i8**, i8*** %5, align 8
  %10 = load i32**, i32*** %6, align 8
  %11 = load i32*, i32** %7, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = call i32 @json_parse_internal(i8** %9, i32* null, i32** %10, i32* %11, i32* %12, i32 1)
  ret i32 %13
}

declare dso_local i32 @json_parse_internal(i8**, i32*, i32**, i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
